fix nowrap in code tag

--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -1,6 +1,3 @@
-/* 
-*/
-
 
 #launch-header-info a {
   text-decoration: none;
@@ -10,8 +7,8 @@
 }
 
 .col-center {
-    float: none;
-    margin: 0 auto;
+  float: none;
+  margin: 0 auto;
 }
 
 div.centre
@@ -23,8 +20,17 @@ div.centre
 }
 
 .vphases {
-        vertical-align:middle;
-        text-align:center;
+  vertical-align:middle;
+  text-align:center;
+}
+
+code {
+  padding: 2px 4px;
+  font-size: 90%;
+  color: #c7254e;
+  white-space: normal;
+  background-color: #f9f2f4;
+  border-radius: 4px;
 }
 
 .table > thead > tr > th,
@@ -54,43 +60,39 @@ div.centre
 
 /* download */
 .downloads {
-        vertical-align:middle;
-        text-align:center;
+  vertical-align:middle;
+  text-align:center;
 }
 .download-data ul {
-        list-style:none;
-        margin:0;
-        padding:0;
+  list-style:none;
+  margin:0;
+  padding:0;
 }
 
 .download-data ul li {
-        margin-bottom:10px;
+  margin-bottom:10px;
 }
 
 .download-data ul li:last-child {
-        margin-bottom:0;
+  margin-bottom:0;
 }
 
 .downloads i {
-       margin: 10px 0;
+  margin: 10px 0;
 }
-
-
-
 
 /* nav */
 
 .navbar-inverse {
-background-color: transparent;
-border-top: 1px solid #555;
-border-bottom: 1px solid #444;
-background: #333;
+  background-color: transparent;
+  border-top: 1px solid #555;
+  border-bottom: 1px solid #444;
+  background: #333;
 }
 
 .navbar-inverse .active {
-background-color: red;
+  background-color: red;
 }
-
 
 .features {
   background: #fff;
@@ -102,7 +104,6 @@ background-color: red;
 
 .specialOffer{background:#f5f5f5; padding:18px 0; border-top: 1px solid #eee;}
 
-
 /* Global Styles */
 
 html, body {
@@ -113,7 +114,6 @@ body {
   padding-top: 75px; /* body padding for fixed top nav */
   background:rgb(236, 236, 236);
 }
-
 
 .img-home-portfolio,
 .img-customer,
@@ -232,123 +232,120 @@ body {
 }
 
 .footer h2, .footer-home h2 {
-	font-size: 26px;
-	color: #fff;
-	margin-bottom: 15px;
+  font-size: 26px;
+  color: #fff;
+  margin-bottom: 15px;
 }
 
 .footer ul, .footer-home ul {
-	list-style: none;
-	padding: 0;
-	margin: 0;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .footer p,
 .footer a, .footer-home a, .footer-home p {
-	line-height: 24px;
-	color: #fff;
-        font-size: 12px;
+  line-height: 24px;
+  color: #fff;
+  font-size: 12px;
 }
 
 .footer a:hover, .footer-home a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 .footer h5, .footer-home h5 {
-	color: #677786;
-	font-weight: 300;
+  color: #677786;
+  font-weight: 300;
 }
 
 /* Headerwrap */
 
 #headerwrap {
-	background: url(images/heavycoin-logo.png) no-repeat center top;
-	margin-top: 0px;
-	padding-top:160px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 600px;
-	width: 100%;
+  background: url(images/heavycoin-logo.png) no-repeat center top;
+  margin-top: 0px;
+  padding-top:160px;
+  text-align:center;
+  background-attachment: relative;
+  background-position: center center;
+  min-height: 600px;
+  width: 100%;
 
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 #headerwrap h1 {
-	color: #ffffff;
+  color: #ffffff;
 }
 
 #headerwrap-2 {
-	margin-top: 0px;
-	padding-top: 15px;
-	text-align: center;
-	min-height: 600px;
-	width: 100%;
-        background-color: #f0f0f0;
+  margin-top: 0px;
+  padding-top: 15px;
+  text-align: center;
+  min-height: 600px;
+  width: 100%;
+  background-color: #f0f0f0;
 }
 
 #headerwrap-2 h1 {
-	color: #000000;
-	line-height: 75px;
-	margin-bottom: 15px;
+  color: #000000;
+  line-height: 75px;
+  margin-bottom: 15px;
 }
 
 #headerwrap-2 h1 span {
-	display: block;
+  display: block;
 }
 
 #headerwrap-2 a.btn {
-	font-size: 16px;
-	padding: 16px 30px;
-	margin: 0 15px;
+  font-size: 16px;
+  padding: 16px 30px;
+  margin: 0 15px;
 }
 
 .marketcap {
-	text-align: center;
-	padding-top: 30px;
-	color: #000;
-	font-size: 18px;
+  text-align: center;
+  padding-top: 30px;
+  color: #000;
+  font-size: 18px;
 }
 
 .marketcap ul {
-	margin: 0;
-	padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .marketcap li {
-	display: inline-block;
-	width: 20%;
+  display: inline-block;
+  width: 20%;
 }
 
 .marketcap li span {
-	display: block;
-	font-size: 26px;
+  display: block;
+  font-size: 26px;
 }
 
 .marketcap li span:last-child {
-	font-weight: 100;
-	text-transform: uppercase;
-	font-size: 16px;
-	padding-top: 5px;
+  font-weight: 100;
+  text-transform: uppercase;
+  font-size: 16px;
+  padding-top: 5px;
 }
 
 .marketcap .updated {
-	font-size: 14px;
-	font-weight: 300;
-	padding-top: 15px;
-	color: #ccc;
+  font-size: 14px;
+  font-weight: 300;
+  padding-top: 15px;
+  color: #ccc;
 }
-
-
-
 
 /* .accordion-group, .well,.nav-pills > .active > a, .nav > li > a:hover,.nav-tabs .open .dropdown-toggle, .nav-pills .open .dropdown-toggle, .nav > li.dropdown.open.active > a:hover {
 */
